--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
-    <a class="navbar-brand font-weight-bolder mr-3" href="{{site.baseurl}}/index.html"><img
+    <a class="navbar-brand font-weight-bolder mr-3" href="{{site.baseurl}}/"><img class="header-logo"
         src="{{site.baseurl}}/{{site.logo}}"></a>
     <button class="navbar-light navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsDefault"
       aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
