[SEO, Analytics]  - Add google verification for search console  - Add Google analytics tab

--- a/_includes/tracking-footer.html
+++ b/_includes/tracking-footer.html
@@ -28,4 +28,10 @@ window.cookieconsent.initialise({
     "href": "{{site.url}}{{site.baseurl}}/privacy-policy.html"
   }
 })});
+
 </script>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NX8LBPLD"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
