[setup] added to search by Korean

--- a/_includes/search-lunr.html
+++ b/_includes/search-lunr.html
@@ -1,4 +1,7 @@
 <script src="{{site.baseurl}}/assets/js/lunr.js"></script>
+<script src="{{site.baseurl}}/assets/js/lunr.multi.min.js"></script>
+<script src="{{site.baseurl}}/assets/js/lunr.stemmer.support.min.js"></script>
+<script src="{{site.baseurl}}/assets/js/lunr.ko.min.js"></script>
 
 <script>
 $(function() {
@@ -27,10 +30,11 @@ var documents = [{% for page in site.pages %}{% if page.url contains '.xml' or p
     }{% if forloop.last %}{% else %}, {% endif %}{% endfor %}];
 
 var idx = lunr(function () {
+    this.use(lunr.multiLanguage('en', 'ko'));
     this.ref('id')
     this.field('title')
     this.field('body')
-
+    
     documents.forEach(function (doc) {
         this.add(doc)
     }, this)
